# MADI

./: README.md  pyproject.toml
configs/dev/: default.yaml
data/: diagnosis.json  medical_knowledge.txt  sample.json  test.py
src/madi/: main.py
src/madi/agents/: __init__.py  clinician_agent.py  search_agent.py  synthesize_agent.py
src/madi/app/: init_diagnosis.py  logic_statement_converter.py  teamup.py
src/madi/constants/: __init__.py  clinician_functions.py  env.py  medical_departments.py  symbols.py
src/madi/handlers/: __init__.py  logging_handler.py
src/madi/llm/: generate.py
src/madi/prompt_engineering/: __init__.py  agent_template.py  clinical_agent_template.py  document_refine_template.py  initial_diagnosis_template.py  leader_template.py  logical_template.py  medical_knowledge_template.py  patient_entity_template.py  resolution_template.py  search_agent_template.py  teamup_template.py
src/madi/rule_based_systems/: __init__.py  resolution_verifier.py
src/madi/schema/: __init__.py  department_assignment.py  initial_diagnosis_structure.py  logic_structure.py  medical_knowledge_structure.py  patient_entity_structure.py  resolution_structure.py  search_result_structure.py  short_mem_structure.py  sys_response_structure.py  tool_structure.py
src/madi/tools/: __init__.py  duckgo_search.py  pubmed_search.py
src/madi/ui/: app.py
src/madi/utils/: __init__.py  config_utils.py  text_utils.py  tool_utils.py
